fix for dynamic field mapping